# divi-map

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: main.yml
data/raw/: icu_2020-04-09T08:43:47Z.json  icu_2020-04-09T09:12:26Z.json  icu_2020-04-09T11:02:52Z.json  icu_2020-04-09T12:16:16Z.json  icu_2020-04-09T12:30:13Z.json  icu_2020-04-09T13:16:47Z.json  icu_2020-04-09T14:16:58Z.json  icu_2020-04-09T15:16:59Z.json  icu_2020-04-09T16:16:27Z.json  icu_2020-04-09T17:16:50Z.json  icu_2020-04-09T18:15:57Z.json  icu_2020-04-09T19:17:22Z.json  icu_2020-04-09T20:15:57Z.json  icu_2020-04-09T21:16:27Z.json  icu_2020-04-09T22:17:01Z.json  icu_2020-04-10T03:15:51Z.json  icu_2020-04-10T04:16:38Z.json  icu_2020-04-10T05:16:55Z.json  icu_2020-04-10T06:16:54Z.json  icu_2020-04-10T07:16:46Z.json  icu_2020-04-10T08:16:42Z.json  icu_2020-04-10T09:17:06Z.json  icu_2020-04-10T10:16:42Z.json  icu_2020-04-10T11:16:02Z.json  icu_2020-04-10T12:16:21Z.json  icu_2020-04-10T13:16:42Z.json  icu_2020-04-10T14:15:25Z.json  icu_2020-04-10T15:15:39Z.json  icu_2020-04-10T16:16:28Z.json  icu_2020-04-10T17:16:33Z.json  icu_2020-04-10T18:16:25Z.json  icu_2020-04-10T19:16:41Z.json  icu_2020-04-10T20:16:03Z.json  icu_2020-04-10T21:16:34Z.json  icu_2020-04-10T23:17:37Z.json  icu_2020-04-11T02:15:57Z.json  icu_2020-04-11T04:16:36Z.json  icu_2020-04-11T05:15:22Z.json  icu_2020-04-11T06:16:26Z.json  icu_2020-04-11T07:16:04Z.json  (+1261 more)
docs/: index.html  index.j2
scripts/: 01_download.py  02_map.py  02_process.py  03_map.py  download_intensivregister.py
