[tool.poetry]
name = "divi-map"
version = "0.1.0"
description = ""
authors = ["Thorben Jensen <jensen.thorben@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
pandas = "^1.0.3"
plotly = "^4.6.0"
pyfunctional = "^1.3.0"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pylama = "^7.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
